feat: complete cloud full-stack deployment setup with health endpoints, Docker, Render, and dynamic backend connectivity